--- a/css/styles.css
+++ b/css/styles.css
@@ -810,4 +810,73 @@ img {
     border-color: var(--accent-color);
 }
 
+.modal-checkbox-wrapper {
+    margin-bottom: 30px;
+    display: flex;
+    align-items: center;
+
+    align-self: center;
+
+    color: var(--secondary-text-color);
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+}
+
+.modal-checkbox-svg {
+    border: var(--primary-text-color) 1px solid;
+    border-radius: 2px;
+    padding-top: 3px;
+    padding-right: 1px;
+    padding-bottom: 2px;
+    padding-left: 2px;
+    cursor: pointer;
+    margin-right: 7px;
+}
+
+.modal-checkbox:checked + .modal-checkbox-svg {
+    background-color: var(--accent-color);
+    border-color: var(--accent-color);
+}
+
+.modal-checkbox:focus + .modal-checkbox-svg {
+    outline: 2px solid black;
+}
+
+.policy-link {
+    color: var(--accent-color);
+}
+
+.modal-submit {
+    color: var(--white-text-color);
+    background-color: var(--accent-color);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+
+    cursor: pointer;
+
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    padding: 10px 52px;
+    border-radius: 4px;
+    border: 0;
+
+    min-width: 200px;
+    justify-content: center;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    transition: background-color var(--transition-dur-and-func);
+}
+
+.modal-submit:hover,
+.modal-submit:focus {
+    background-color: var(--button-focus-color);
+}
+
 /* ============== /MODAL FORM ============== */
