--- a/css/styles.css
+++ b/css/styles.css
@@ -460,6 +460,13 @@ img {
     padding-bottom: 60px;
 }
 
+.container-footer {
+    display: flex;
+    justify-content: space-between;
+
+    align-items: baseline;
+}
+
 .contacts-footer {
     color: var(--footer-text-color);
     font-size: 14px;
@@ -522,13 +529,6 @@ img {
     background-color: var(--accent-color);
 }
 
-.container-footer {
-    display: flex;
-    column-gap: 70px;
-
-    align-items: baseline;
-}
-
 .footer-join {
     font-weight: 700;
     font-size: 14px;
@@ -538,6 +538,61 @@ img {
     color: var(--white-text-color);
 
     margin-bottom: 20px;
+}
+
+.footer-form {
+    display: flex;
+    gap: 12px;
+}
+
+.footer-field-input {
+    height: 50px;
+    width: 358px;
+    padding-left: 16px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+
+    background-color: transparent;
+    
+    color: var(--white-text-color);
+}
+
+.footer-field-input::placeholder {
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.subscript-btn {
+    color: var(--white-text-color);
+    background-color: var(--accent-color);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+
+    cursor: pointer;
+
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    padding: 10px 28px;
+    border-radius: 4px;
+    border: 0;
+
+    min-width: 200px;
+    justify-content: center;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    gap: 10px;
 }
 
 /* portfolio.html */
@@ -684,7 +739,6 @@ img {
     top: 50%;
     left: 50%;
     width: 528px;
-    height: 581px;
     transform: translate(-50%, -50%);
     background-color: var(--primary-bg-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
